Increase height of display element to fix minor layout issue

--- a/style.css
+++ b/style.css
@@ -111,7 +111,7 @@ textarea {
 
 .display-input {
   font-size: 30px;
-  height: 42px;
+  height: 46px;
   margin: 3px;
   -ms-overflow-style: none; /* IE and Edge */
   scrollbar-width: none; /* Firefox */
